correction de l'overflow due a la scrollbar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -565,44 +565,45 @@ h1, h2, h3, h4, h5, h6 {
   }
   /* line 62, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services {
-    max-width: 100vw;
-    grid-template-columns: 50vw 50vw;
+    max-width: calc(100vw - 18px);
+    grid-template-columns: repeat(2, calc(50vw - 9px));
     grid-template-areas: "a b" "c d" "e f";
   }
-  /* line 69, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 71, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__article {
+    box-sizing: border-box;
     padding: 138px 165px 0px 110px;
   }
 }
 
 @media screen and (min-width: 1150px) and (max-width: 1250px) {
-  /* line 69, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 71, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__article {
     padding-top: 60px;
   }
 }
 
 @media screen and (min-width: 1150px) {
-  /* line 75, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 78, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__article:first-child {
     padding-right: 110px;
     padding-left: 165px;
   }
-  /* line 79, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 82, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__image {
     aspect-ratio: 720/600;
   }
-  /* line 82, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 85, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__more {
     padding-left: 9px;
     padding-right: 8px;
   }
-  /* line 86, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 89, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__titleh2 {
     font-size: 2.5em;
     margin-bottom: 32px;
   }
-  /* line 90, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 93, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__design, .services__photography {
     text-align: center;
     padding-top: 0;
@@ -613,7 +614,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media screen and (min-width: 1150px) and (max-width: 1250px) {
-  /* line 90, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 93, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__design, .services__photography {
     padding-bottom: 29px;
     padding-left: 150px;
@@ -622,22 +623,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media screen and (min-width: 1150px) {
-  /* line 101, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 104, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__design p, .services__photography p {
     font-size: 1em;
   }
-  /* line 105, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 108, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__titleh3 {
     font-size: 1.75em;
     margin-bottom: 27px;
     margin-top: calc(50vw - 322px);
   }
-  /* line 111, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 114, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .services__text {
     margin-bottom: 40px;
     font-size: 1.125em;
   }
-  /* line 117, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 120, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .testimonials {
     display: flex;
     flex-wrap: wrap;
@@ -649,60 +650,60 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 160px;
     padding-bottom: 160px;
   }
-  /* line 127, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 130, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .testimonials__title {
     flex: 0 0 100%;
     letter-spacing: 5px;
     margin-bottom: 51px;
   }
-  /* line 132, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 135, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .testimonials__item {
     width: 31%;
   }
-  /* line 135, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 138, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .testimonials__avatar {
     margin-bottom: 58px;
   }
-  /* line 138, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 141, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .testimonials__text {
     font-size: 1.125em;
     margin-bottom: 69px;
   }
-  /* line 142, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 145, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .testimonials__name {
     font-size: 1.125em;
     margin-bottom: 9px;
   }
-  /* line 146, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 149, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .testimonials__roletitle {
     font-size: 0.875em;
   }
-  /* line 150, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 153, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .footer {
     grid-template-areas: "a b c d" "about about about about";
   }
-  /* line 153, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 156, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .footer__illustration {
     aspect-ratio: 360/447;
   }
-  /* line 156, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 159, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .footer__about {
     grid-area: about;
     padding: 72px;
   }
-  /* line 160, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 163, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .footer__brand {
     margin-bottom: 40px;
   }
-  /* line 163, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 166, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .footer__menu {
     margin-bottom: 88px;
   }
-  /* line 165, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 168, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .footer__menu a + a {
     margin-left: 57px;
   }
-  /* line 170, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
+  /* line 173, ../../OneDrive/Documents/BeCode/sunnyside-agency/assets/scss/layout/_desktop.scss */
   .footer__socialss a + a {
     margin-left: 28px;
   }
