--- a/assets/scss/layout/_desktop.scss
+++ b/assets/scss/layout/_desktop.scss
@@ -60,13 +60,16 @@
         }
     }
     .services{
-        max-width: 100vw;
-        grid-template-columns: 50vw 50vw;
+        max-width: calc(100vw - 18px);
+        grid-template-columns: repeat(2, calc(50vw - 9px)) ;
         grid-template-areas: 
                                 "a b"
                                 "c d"
                                 "e f";
+        article, div{
+        }
         &__article{
+            box-sizing: border-box;
             padding: 138px 165px 0px 110px;
             @media screen and (max-width: 1250px){
                 padding-top: 60px;
